se actualiza la base dedatos

--- a/config/db.ini
+++ b/config/db.ini
@@ -1,6 +1,6 @@
 Configuracion: Base de Datos
-Servidor: itasesorias.com
+Servidor: localhost
 Puerto: 3306
-Base Datos: marco
-Usuario: marco
+Base Datos: sgi_inventarios
+Usuario: root
 Pass: LxKhGO3XfXOyNRRf
